<resources>
    <string name="app_name">HMDYK MEXICO?</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="question">This is a question to be made to the user about the main topic</string>
    <string name="imageOfQuestion">Content Description related to question</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="options">OPTIONS</string>
    <string name="home_background">Beach Background</string>
</resources>
