<?xml version="1.0" encoding="utf-8"?><!--TODO
Change content description dynamically of question image
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/imageOfQuestion"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <Button
                    android:id="@+id/answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

                <Button
                    android:id="@+id/answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>